--- a/Views/MainWindow.axaml
+++ b/Views/MainWindow.axaml
@@ -7,7 +7,9 @@
         x:Class="GetStartedApp.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/avalonia-logo.ico"
-        Title="GetStartedApp">
+        Title="GetStartedApp"
+        
+        WindowStartupLocation="CenterScreen">
 
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
@@ -15,6 +17,20 @@
         <vm:MainWindowViewModel/>
     </Design.DataContext>
 
-    <TextBlock Text="{Binding Greeting}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+    <Grid ColumnDefinitions="Auto, *, Auto">
+        <Grid Column="0"
+              ColumnDefinitions="Auto, Auto">
+            <StackPanel Grid.Column="0">
+            </StackPanel>
+            
+            <TabControl Grid.Column="1">
+            </TabControl>
+        </Grid>
+        
+        <DockPanel Grid.Column="1">
+        </DockPanel>
+        
+        <StackPanel Grid.Column="2"></StackPanel>
+    </Grid>
 
 </Window>
