--- a/Views/ControlPanelView.axaml
+++ b/Views/ControlPanelView.axaml
@@ -3,7 +3,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="GetStartedApp.Views.ControlPanel">
+             x:Class="GetStartedApp.Views.ControlPanelView">
     <Grid ColumnDefinitions="Auto, Auto">
         <StackPanel Grid.Column="0">
         </StackPanel>
