--- a/Views/DocumentPanelView.axaml
+++ b/Views/DocumentPanelView.axaml
@@ -4,6 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="GetStartedApp.Views.DocumentPanelView">
+    <UserControl.Styles>
+        <StyleInclude Source="../Styles/DocumentPanelStyle.axaml" />
+    </UserControl.Styles>
+    
     <DockPanel>
         
     </DockPanel>
