--- a/Views/StatusBarView.axaml
+++ b/Views/StatusBarView.axaml
@@ -4,6 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="GetStartedApp.Views.StatusBarView">
+    <UserControl.Styles>
+        <StyleInclude Source="../Styles/StatusBarStyle.axaml" />
+    </UserControl.Styles>
+    
     <StackPanel>
         
     </StackPanel>
