--- a/Views/ControlPanelView.axaml
+++ b/Views/ControlPanelView.axaml
@@ -2,6 +2,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:viewModels="using:GetStartedApp.ViewModels"
+             x:DataType="viewModels:ControlPanelViewModel"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="GetStartedApp.Views.ControlPanelView">
     <UserControl.Styles>
@@ -13,6 +15,18 @@
         </StackPanel>
             
         <TabControl Grid.Column="1">
+            <TabItem Header="Главное">
+                <WrapPanel Orientation="Horizontal">
+                    <ComboBox ItemsSource="{Binding FontFamilies}"
+                              SelectedItem="{Binding SelectedFontFamily}">
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Name}" />
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                </WrapPanel>
+            </TabItem>
         </TabControl>
     </Grid>
 </UserControl>
