--- a/Styles/ControlPanelStyle.axaml
+++ b/Styles/ControlPanelStyle.axaml
@@ -1,4 +1,6 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+    <Style Selector="ComboBox.Fonts">
+        <Setter Property="Width" Value="120" />
+    </Style>
 </Styles>
