--- a/Views/ControlPanelView.axaml
+++ b/Views/ControlPanelView.axaml
@@ -18,10 +18,19 @@
             <TabItem Header="Главное">
                 <WrapPanel Orientation="Horizontal">
                     <ComboBox ItemsSource="{Binding FontFamilies}"
-                              SelectedItem="{Binding SelectedFontFamily}">
+                              SelectedItem="{Binding SelectedFontFamily}"
+                              Classes="Fonts">
                         <ComboBox.ItemTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding Name}" />
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
+                    
+                    <ComboBox>
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock />
                             </DataTemplate>
                         </ComboBox.ItemTemplate>
                     </ComboBox>
