--- a/Styles/ControlPanelStyle.axaml
+++ b/Styles/ControlPanelStyle.axaml
@@ -1,6 +1,10 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style Selector="ComboBox.Fonts">
+    <Style Selector="ComboBox.FontFamily">
         <Setter Property="Width" Value="120" />
+    </Style>
+    
+    <Style Selector="ComboBox.FontSize">
+        <Setter Property="Width" Value="65" />
     </Style>
 </Styles>
