--- a/Styles/ControlPanelStyle.axaml
+++ b/Styles/ControlPanelStyle.axaml
@@ -7,4 +7,9 @@
     <Style Selector="ComboBox.FontSize">
         <Setter Property="Width" Value="65" />
     </Style>
+    
+    <Style Selector="Button.FontSizeButton">
+        <Setter Property="Height" Value="34" />
+        <Setter Property="Background" Value="Transparent" />
+    </Style>
 </Styles>
