--- a/Views/ControlPanelView.axaml
+++ b/Views/ControlPanelView.axaml
@@ -31,7 +31,7 @@
                               SelectedItem="{Binding SelectedFontSize}"
                               Classes="FontSize" />
                     
-                    <Button Classes="FontSizeButton">
+                    <Button Classes="FontSize">
                         <RelativePanel>
                             <TextBlock x:Name="BigA" 
                                        FontSize="16"
@@ -45,7 +45,7 @@
                         </RelativePanel>
                     </Button>
                     
-                    <Button Classes="FontSizeButton">
+                    <Button Classes="FontSize">
                         <RelativePanel>
                             <TextBlock x:Name="SmallA" 
                                        FontSize="13"
