--- a/Views/ControlPanelView.axaml
+++ b/Views/ControlPanelView.axaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:views="clr-namespace:GetStartedApp.Views"
              xmlns:viewModels="using:GetStartedApp.ViewModels"
              x:DataType="viewModels:ControlPanelViewModel"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
@@ -27,9 +28,7 @@
                         </ComboBox.ItemTemplate>
                     </ComboBox>
                     
-                    <ComboBox ItemsSource="{Binding FontSizes}"
-                              SelectedItem="{Binding SelectedFontSize}"
-                              Classes="FontSize" />
+                    <views:FontSizeDatalistView></views:FontSizeDatalistView>
                     
                     <Button Classes="FontSize">
                         <RelativePanel>
