add connect ControlPanel and FontSizeDatalist

--- a/Views/ControlPanelView.axaml
+++ b/Views/ControlPanelView.axaml
@@ -13,7 +13,7 @@
     
     <Grid ColumnDefinitions="Auto, Auto">
         <StackPanel Grid.Column="0">
-            <TextBlock Text="{Binding SelectedFontSize}" />
+            <TextBlock Text="{Binding TextFormatting.FontSize}"></TextBlock>
         </StackPanel>
             
         <TabControl Grid.Column="1">
