--- a/Styles/FontSizeDatalistStyle.axaml
+++ b/Styles/FontSizeDatalistStyle.axaml
@@ -1,21 +1,34 @@
 <Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style Selector="Popup">
-        <Setter Property="Width" Value="60" />
+        <Setter Property="Width" Value="90" />
+        <Setter Property="Height" Value="120" />
     </Style>
     
     <Style Selector="TextBox.FontSizeSearch">
-        <Setter Property="Width" Value="60" />
-        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="Width" Value="64" />
+        <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
     
     <Style Selector="ToggleButton">
-        <Setter Property="Height" Value="34"></Setter>
+        <Setter Property="Height" Value="30"></Setter>
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="Background" Value="Transparent" />
     </Style>
     
     <Style Selector="ToggleButton:checked">
         <Setter Property="Background" Value="Gray"></Setter>
+    </Style>
+    
+    <Style Selector="TextBox.no-border">
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="MaxLength" Value="2" />
+        <Setter Property="BorderBrush" Value="Transparent" />
+    </Style>
+    
+    <Style Selector="TextBox.no-border:focus">
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="MaxLength" Value="2" />
+        <Setter Property="BorderBrush" Value="Transparent" />
     </Style>
 </Styles>
