--- a/Styles/ControlPanelStyle.axaml
+++ b/Styles/ControlPanelStyle.axaml
@@ -8,7 +8,12 @@
         <Setter Property="Width" Value="65" />
     </Style>
     
-    <Style Selector="Button.FontSize">
+    <Style Selector="Button.ControlPanel">
+        <Setter Property="Height" Value="34" />
+        <Setter Property="Background" Value="Transparent" />
+    </Style>
+    
+    <Style Selector="ToggleButton.ControlPanel">
         <Setter Property="Height" Value="34" />
         <Setter Property="Background" Value="Transparent" />
     </Style>
