--- a/App.axaml
+++ b/App.axaml
@@ -3,12 +3,12 @@
              x:Class="GetStartedApp.App"
              xmlns:local="using:GetStartedApp"
              RequestedThemeVariant="Light">
-
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
   
     <Application.Styles>
         <FluentTheme />
+        <StyleInclude Source="avares://Avalonia.Controls.ColorPicker/Themes/Fluent/Fluent.xaml" />
     </Application.Styles>
 </Application>
