--- a/Views/HighlightColorIconView.axaml
+++ b/Views/HighlightColorIconView.axaml
@@ -2,6 +2,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:viewModels="clr-namespace:GetStartedApp.ViewModels"
+             x:DataType="viewModels:HighlightColorIconViewModel"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="GetStartedApp.Views.HighlightColorIconView">
     <UserControl.Styles>
@@ -14,6 +16,6 @@
                   x:Name="PencilIcon" />
         <Rectangle RelativePanel.Below="PencilIcon"
                    RelativePanel.AlignHorizontalCenterWithPanel="True"
-                   Fill="Black" />
+                   Fill="{Binding SelectedColor}" />
     </RelativePanel>
 </UserControl>
