--- a/Views/ControlPanelView.axaml
+++ b/Views/ControlPanelView.axaml
@@ -79,6 +79,10 @@
                     </ToggleButton>
                     
                     <views:ColorPickerView DataContext="{Binding HighlightColorPicker}" />
+                    
+                    <Rectangle Fill="{Binding HighlightColorPicker.ContentViewModel.TextFormatting.HighlightColor}" Width="20" Height="20" />
+                    <TextBlock Text="{Binding HighlightColorPicker.ContentViewModel.TextFormatting.FontFamily}"></TextBlock>
+                    
                 </WrapPanel>
             </TabItem>
         </TabControl>
